k8s/flux/clusters/tal-clu-1/infra/observe/mikrotik-exporter/mikrotik-webfig-proxy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http
  namespace: mikrotik-exporter
spec:
  entryPoints: [ "web" ]
  routes:
  - match: Host(`mikrotik.homelab.emerconnelly.com`)
    kind: Rule
    middlewares:
    - name: https-redirect
      namespace: traefik
    services:
    - name: noop@internal
      kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https
  namespace: mikrotik-exporter
spec:
  entryPoints: [ "websecure" ]
  routes:
  - match: Host(`mikrotik.homelab.emerconnelly.com`)
    kind: Rule
    services:
    - name: mikrotik-webfig-proxy
      port: 80
      passHostHeader: true
      sticky:
        cookie:
          name: traefik
          secure: true
          httpOnly: true
          sameSite: lax
  tls:
    secretName: ingress-tls
